# acres

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pdm_build.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yml
changelog.d/: 20241209_154150_effigies_recommend_spec_name.md  20241209_154445_effigies_recommend_spec_name.md  20250222_095048_markiewicz.md  20250222_104147_markiewicz_test_types.md  20250528_124546_markiewicz_typ_module.md  20250530_212332_markiewicz.md  20250924_091728_markiewicz_310_.md  scriv.ini
docs/: conf.py  index.md
src/acres/: __init__.py  _compat.py  cache.py  typ.py
src/data_loader/: __init__.py
tests/: test_data_module.py  test_loader_instance.py  test_zipmodule.py
tests/data/: __init__.py
