[project]
name = "data-loader"
version = "0.1.0"
description = "Data loading utility"
authors = [
    {name = "Christopher J. Markiewicz", email = "effigies@gmail.com"},
]
dependencies = [
  "importlib_resources; python_version < '3.11'",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
  "LICENSE",
]

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 99

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
