[project]
name = "acres"
description = "Access resources on your terms"
authors = [
  {name = "The NiPreps Developers", email = "nipreps@gmail.com"}
]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://nipreps-acres.readthedocs.io/en/latest/"
Repository = "https://github.com/nipreps/acres"
Issues = "https://github.com/nipreps/acres/issues"
Changelog = "https://nipreps-acres.readthedocs.io/en/latest/changelog.html"

[dependency-groups]
doc = [
    "furo>=2024.8.6",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
]
test = [
    "coverage[toml]>=7.8.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
types = [
    "mypy>=1.16.0",
    "pyright>=1.1.401",
]

[build-system]
requires = ["pdm-backend", "uv"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
source-includes = [
  "tests/",
  "tox.ini",
  "uv.lock",
]

[tool.pdm.version]
source = "scm"

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["src", "tests"]
log_cli_level = "INFO"
xfail_strict = true
norecursedirs = [".git"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = ["error"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
  "B",
  "I",
  "UP",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  # Temporary zipimport module generated during tests
  "*/mymodule.zip/*",
]

[tool.coverage.paths]
source = [
  "src/acres",
  "**/site-packages/acres",
]

[tool.coverage.report]
exclude_also = [
  "if.*TYPE_CHECKING:",
]

[tool.mypy]
strict = true
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]

[tool.codespell]
skip = [
  "_build",
]
